--- a/vc2013/ABP.vcxproj.filters
+++ b/vc2013/ABP.vcxproj.filters
@@ -186,6 +186,9 @@
     <ClCompile Include="..\src\ParameterBag.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\singleton.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Resources.h">
